# runninglinuxkernel_4.0

./: Makefile  README  README.md  build_ds5_arm64.sh  run.sh  run_debian_arm32.sh  run_debian_arm64.sh  run_debian_x86_64.sh  实验前必读- 重要说明.docx  实验前必读- 重要说明_v1.3.docx
_install_arm32/etc/init.d/: rcS
_install_arm64/etc/init.d/: rcS
_install_x86/etc/init.d/: rcS
arch/arm/: Kconfig
arch/arm/configs/: debian_defconfig  vexpress_defconfig
arch/arm/include/asm/: cmpxchg.h  thread_info.h
arch/arm64/configs/: debian_defconfig
arch/arm64/include/asm/: jump_label.h  thread_info.h
arch/x86/configs/: debian_defconfig  i386_defconfig  x86_64_defconfig
arch/x86/ia32/: Makefile
arch/x86/kernel/acpi/: Makefile
arch/x86/kernel/cpu/: Makefile
boot-wrapper-aarch64/: FDT.pm  Makefile.am  README  addpsci.pl  bakery_lock.c  boot_common.c  cache.c  configure.ac  findbase.pl  findcpuids.pl  findmem.pl  fvp-base-gicv3-psci.dtb  gic-v3.c  gic.c  lib.c  model.lds.S  platform.c  psci.c
boot-wrapper-aarch64/arch/aarch32/: boot.S  common.S  psci.S  stack.S  utils.S
boot-wrapper-aarch64/arch/aarch32/include/asm/: cpu.h  gic-v3.h  io.h
boot-wrapper-aarch64/arch/aarch64/: boot.S  common.S  psci.S  spin.S  stack.S  utils.S
boot-wrapper-aarch64/arch/aarch64/include/asm/: cpu.h  gic-v3.h  io.h
boot-wrapper-aarch64/include/: bakery_lock.h  compiler.h  cpu.h  linkage.h  psci.h  spin.h
drivers/gpu/drm/i915/: Makefile
filesystem/: README.MD
filesystem/initrdfs/: build-initrdfs.sh
filesystem/initrdfs/arm/: run.sh
filesystem/initrdfs/arm64/: run.sh
filesystem/initrdfs/x86/: run.sh
filesystem/initrdfs/x86_64/: run.sh
filesystem/rootfs/_install_arm64/etc/: fstab
filesystem/rootfs/_install_x86_64/etc/: inittab
fs/hostfs/: Makefile
fs/proc/: Makefile
include/asm-generic/: cacheflush.h
include/linux/: compiler.h
kernel/linux-4.0/src/fs/: binfmt_elf.c
kernel/linux-4.0/src/kmodules/: README
kmodules/: README
mm/: memory.c  rmap.c
module_test/systemtap/: mmanonpage.stp  mmfilepage.stp
rlk_lab/rlk_advanced/crash/00_stack/: test  test.c
rlk_lab/rlk_advanced/crash/01_oops/: dump_1
rlk_lab/rlk_advanced/crash/02_list/: .list_crash.c.swm  .list_crash.c.swn  .list_crash.c.swo  .list_crash.c.swp  Makefile  list_crash.c
rlk_lab/rlk_advanced/crash/03_mem/: Makefile  mem_test.c
rlk_lab/rlk_advanced/crash/04_crash/: Makefile  crash_test.c
rlk_lab/rlk_advanced/kmemleak_test/: Makefile  kmemleak_test.c
rlk_lab/rlk_advanced/lock_test/: Makefile  lock_test.c
rlk_lab/rlk_advanced/mutexlock_test/: Makefile  mutexlock_test.c
rlk_lab/rlk_advanced/oops_test/: Makefile  oops_test.c
rlk_lab/rlk_advanced/rcu_test/: Makefile  rcu_test.c
rlk_lab/rlk_advanced/slub_test/: Makefile  slub_test.c
rlk_lab/rlk_advanced/systemtap/: hello-word.stp  latencytap.stp  mmwriteback.stp  periodic.stp
rlk_lab/rlk_basic/: 实验重要说明.docx
rlk_lab/rlk_basic/chapter-1/: Lab1-实验说明.docx  Lab3-实验说明.docx  Lab4-实验说明.docx
rlk_lab/rlk_basic/chapter-2/lab2/: Makefile  main.c
rlk_lab/rlk_basic/chapter-2/lab4/: vimrc
rlk_lab/rlk_basic/chapter_10/lab1_tasklet/: Makefile  lab1_tasklet_实验说明.docx  mydemodrv_tasklet.c
rlk_lab/rlk_basic/chapter_10/lab2_workqueue/: Makefile  lab2_workqueue_实验说明 .docx  mydemodrv_work.c
rlk_lab/rlk_basic/chapter_10/lab3/: Makefile  lab3_test.c  lab3_实验说明.docx
rlk_lab/rlk_basic/chapter_11/lab10_oops/: lab10_oops_实验说明 .docx
rlk_lab/rlk_basic/chapter_11/lab11_perf/: lab11_perf_实验说明.docx  test
rlk_lab/rlk_basic/chapter_11/lab12_flame_graph/: lab12_火焰图_实验说明.docx  test.c
rlk_lab/rlk_basic/chapter_11/lab13_slub_debug/: lab13_slubdebug_实验说明.docx  run.sh  vexpress_defconfig_slubdebug
rlk_lab/rlk_basic/chapter_11/lab14_kmemleak/: lab14_kmemleak_实验说明.docx  run.sh
rlk_lab/rlk_basic/chapter_11/lab15_kasan/: lab15_kasan_实验说明.docx
rlk_lab/rlk_basic/chapter_11/lab17/: Readme-说明.txt
rlk_lab/rlk_basic/chapter_11/lab18_lkp/: lab18_实验说明.docx
rlk_lab/rlk_basic/chapter_11/lab3_procfs/: Makefile  lab3_procfs_实验说明.docx  proc_test.c
rlk_lab/rlk_basic/chapter_11/lab4_sysfs/: Makefile  lab4_sysfs_实验说明.docx  sysfs_test.c
rlk_lab/rlk_basic/chapter_11/lab5_debugfs/: Makefile  debugfs_test.c  lab5_debugfs_实验说明.docx
rlk_lab/rlk_basic/chapter_11/lab8_trace_marker/: lab8_trace-marker_实验说明.docx  trace_marker_test.c
rlk_lab/rlk_basic/chapter_13_block_fs/block_driver/: ramdisk_driver.c
rlk_lab/rlk_basic/chapter_13_extra/block_driver/: Makefile
rlk_lab/rlk_basic/chapter_2/: Lab5-实验说明.docx  Lab8-实验说明.docx
rlk_lab/rlk_basic/chapter_2/lab2/: README.md  list.h
rlk_lab/rlk_basic/chapter_3/: Lab1-实验说明.docx  Lab2-实验说明.docx  Lab3-实验说明.docx
rlk_lab/rlk_basic/chapter_4/lab1_simple_module/: Makefile  lab1-实验说明.docx  my_test.c
rlk_lab/rlk_basic/chapter_4/lab2_module_parm/: Makefile  lab2-实验说明.docx  module_parm.c
rlk_lab/rlk_basic/chapter_5/lab1_simple_driver/: Makefile  chapter-5-lab1-实验说明.docx  simple_char.c  test.c
rlk_lab/rlk_basic/chapter_5/lab2_misc_driver/: Makefile  chapter-5-lab2-实验说明.docx  mydemodrv_misc.c  test.c
rlk_lab/rlk_basic/chapter_5/lab3_mydemo_dev/: chapter-5-lab3-实验说明.docx  mydemodrv_misc.c  test.c
rlk_lab/rlk_basic/chapter_5/lab4_mydemo_kfifo/: chapter-5-lab4-实验说明.docx  mydemodrv_misc.c  test.c
rlk_lab/rlk_basic/chapter_5/lab5_mydemodrv_nonblock/: chapter-5-lab5-实验说明.docx  mydemodrv_misc.c  test.c
rlk_lab/rlk_basic/chapter_5/lab6_mydemodrv_block/: chapter-5-lab6-实验说明.docx  mydemodrv_misc.c  test.c
rlk_lab/rlk_basic/chapter_5/lab7_mydemodrv_poll/: Makefile  chapter-5-lab7-实验说明.docx  mydemodrv_poll (copy).c  mydemodrv_poll.c  test.c
rlk_lab/rlk_basic/chapter_5/lab8_mydemodrv_find_error/: Makefile  mydemodrv_error.c
rlk_lab/rlk_basic/chapter_5/lab9_mydemodrv_fasync/: Makefile  lab9_fasync_实验说明.docx  mydemodrv_fasync.c
rlk_lab/rlk_basic/chapter_6/lab1/: 0001-arm32-add-a-new-syscall-which-called-getpuid.patch  README.md  test_getpuid_syscall.c
rlk_lab/rlk_basic/chapter_6/lab2/: 0001-x86-add-a-new-syscall-which-called-getpuid.patch  README.md  test_getpuid_syscall.c
script/: run.sh
tools/vm/: tags
(+1479 files in other folders)
